pamc/src/tests/sample_code/should_fail/multi_file/bind/expected_term_got_mod/src/mod.ph
pub mod foo;

pub type FooPair {
    .C(_: foo, _: foo): FooPair,
}
